add generated files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
 examples
 exfaust*
 mkdocs/docs/rsrc/
+.DS_Store
+
+mkdocs/docs/guide/http.md
+mkdocs/docs/guide/introduction.md
+mkdocs/docs/guide/midi.md
+mkdocs/docs/guide/osc.md
+mkdocs/docs/guide/quick-start.md
+mkdocs/docs/refs/compiler.md
+mkdocs/docs/refs/syntax.md
+mkdocs/docs/refs/tools.md
