add mathjax as extra javascript

--- a/mkdocs/mkdocs.yml
+++ b/mkdocs/mkdocs.yml
@@ -63,6 +63,9 @@ plugins:
 extra_css:
    - '/css/faust.css'
 
+extra_javascript:
+  - https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-AMS_CHTML-full
+
 markdown_extensions:
     - markdown_include.include:
         base_path: './docs'
