Faust 101 in progress

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,6 @@ mkdocs/docs/guide/quick-start.md
 mkdocs/docs/refs/compiler.md
 mkdocs/docs/refs/syntax.md
 mkdocs/docs/refs/tools.md
+
+.vscode
+docs/rsrc
