--- a/mkdocs/mkdocs.yml
+++ b/mkdocs/mkdocs.yml
@@ -40,6 +40,7 @@ nav:
       - ' 2018-12-01 PAW ' : workshops/2018-12-01-paw.md
       - ' 2020-03-24 CITI ': workshops/2020-03-24-faust-citi.md
       - ' 2020-04-10 Faust 101 ': workshops/2020-04-10-faust-101.md
+      - ' 2020-04-10 Faust/JUCE ': workshops/2020-04-10-faust-juce.md
     - About: about.md
 
 theme: flatly
