--- a/mkdocs/mkdocs.yml
+++ b/mkdocs/mkdocs.yml
@@ -73,5 +73,6 @@ extra_javascript:
 
 markdown_extensions:
     - mdx_math
+    - admonition
     - markdown_include.include:
         base_path: './docs'
