remove and ignore generated files

--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,53 @@
-mkdocs/docs/examples
-mkdocs/docs/refs/syntax/exfaust*
-mkdocs/docs/refs/compiler/exfaust*
-mkdocs/docs/guide/http/exfaust*
-mkdocs/docs/workshops/*/exfaust*
-mkdocs/docs/manual/*/exfaust*
-mkdocs/docs/tutorials/*/exfaust*
 
-mkdocs/docs/workshops/*.md
-mkdocs/docs/tutorials/*.md
-mkdocs/docs/examples/*.md
-mkdocs/docs/guide/introduction/
-mkdocs/docs/guide/midi/
-mkdocs/docs/guide/osc/
-mkdocs/docs/guide/quick-start/
-mkdocs/docs/rsrc/
 .DS_Store
-
-mkdocs/docs/guide/http.md
-mkdocs/docs/guide/introduction.md
-mkdocs/docs/guide/midi.md
-mkdocs/docs/guide/osc.md
-mkdocs/docs/guide/quick-start.md
-mkdocs/docs/refs/compiler.md
-mkdocs/docs/refs/syntax.md
-mkdocs/docs/refs/tools.md
-
 .vscode
+
+mkdocs/docs/examples
+mkdocs/docs/examples/*.md
+mkdocs/docs/guide/http.md
+mkdocs/docs/guide/http/exfaust*
+mkdocs/docs/guide/introduction.md
+mkdocs/docs/guide/introduction/
+mkdocs/docs/guide/midi.md
+mkdocs/docs/guide/midi/
+mkdocs/docs/guide/osc.md
+mkdocs/docs/guide/osc/
+mkdocs/docs/guide/quick-start.md
+mkdocs/docs/guide/quick-start/
+mkdocs/docs/manual/*/exfaust*
+mkdocs/docs/manual/compiler.md
+mkdocs/docs/manual/http.md
+mkdocs/docs/manual/introduction.md
+mkdocs/docs/manual/midi.md
+mkdocs/docs/manual/osc.md
+mkdocs/docs/manual/quick-start.md
+mkdocs/docs/manual/syntax.md
+mkdocs/docs/manual/tools.md
+mkdocs/docs/refs/compiler.md
+mkdocs/docs/refs/compiler/exfaust*
+mkdocs/docs/refs/syntax.md
+mkdocs/docs/refs/syntax/exfaust*
+mkdocs/docs/refs/tools.md
+mkdocs/docs/rsrc/
+mkdocs/docs/tutorials/*.md
+mkdocs/docs/tutorials/*/exfaust*
+mkdocs/docs/workshops/*.md
+mkdocs/docs/workshops/*/exfaust*
+
+src/examples/ambisonics.md
+src/examples/analysis.md
+src/examples/bela.md
+src/examples/delayEcho.md
+src/examples/dynamic.md
+src/examples/filtering.md
+src/examples/gameaudio.md
+src/examples/generator.md
+src/examples/misc.md
+src/examples/phasing.md
+src/examples/physicalModeling.md
+src/examples/pitchShifting.md
+src/examples/psychoacoustic.md
+src/examples/reverb.md
+src/examples/SAM.md
+src/examples/smartKeyboard.md
+src/examples/spat.md
