add and modify gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,8 @@ mkdocs/docs/tutorials/*/exfaust*
 mkdocs/docs/workshops/*.md
 mkdocs/docs/workshops/*/exfaust*
 
+mkdocs/docs/rail/[0-9]*
+
 src/examples/ambisonics.md
 src/examples/analysis.md
 src/examples/bela.md
