Add documentation for soundfiles.

--- a/mkdocs/mkdocs.yml
+++ b/mkdocs/mkdocs.yml
@@ -16,6 +16,7 @@ nav:
         - 'OSC Support': manual/osc.md
         - 'HTTP Support': manual/http.md
         - 'MIDI Support': manual/midi.md
+        - 'Soundfiles Support': manual/soundfiles.md
         - 'Mathematical Documentation': manual/mathdoc.md
     - Examples: 
          - ' ambisonics ': examples/ambisonics.md
