add css to fix navbar issue

--- a/mkdocs/mkdocs.yml
+++ b/mkdocs/mkdocs.yml
@@ -70,6 +70,7 @@ plugins:
 extra_css:
    - '/css/faust.css'
    - '/css/quickref.css'
+   - '/css/extra.css'
    - '/rail/railroad-diagrams.css'
 
 extra_javascript:
