Add deploying page.

--- a/mkdocs/mkdocs.yml
+++ b/mkdocs/mkdocs.yml
@@ -11,6 +11,7 @@ nav:
         - 'Using the Compiler': manual/compiler.md
         - 'Compiler Options': manual/options.md
         - 'Architecture Files': manual/architectures.md
+        - 'Deploying on the Web': manual/deploying.md
         - 'OSC Support': manual/osc.md
         - 'HTTP Support': manual/http.md
         - 'MIDI Support': manual/midi.md
