Cleanup compiler.md(2).

--- a/mkdocs/mkdocs.yml
+++ b/mkdocs/mkdocs.yml
@@ -1,6 +1,6 @@
 site_name: Faust Documentation
 site_description: A guide to the Faust Programming Language.
-copyright: Copyright &copy; 2020 <a href="https://www.grame.fr">Grame-CNCM</a>
+copyright: Copyright &copy; 2020-2021 <a href="https://www.grame.fr">Grame-CNCM</a>
 nav:
     - Home: index.md  
     - Faust Manual: 
