--- a/mkdocs/mkdocs.yml
+++ b/mkdocs/mkdocs.yml
@@ -12,6 +12,7 @@ nav:
         - 'Compiler Options': manual/options.md
         - 'Architecture Files': manual/architectures.md
         - 'Deploying on the Web': manual/deploying.md
+        - 'Remote compilation': manual/remote.md
         - 'OSC Support': manual/osc.md
         - 'HTTP Support': manual/http.md
         - 'MIDI Support': manual/midi.md
