Add contributing.md page.

--- a/mkdocs/mkdocs.yml
+++ b/mkdocs/mkdocs.yml
@@ -20,6 +20,7 @@ nav:
         - 'faust2[...] Tools': manual/tools.md
         - 'Embedding the Compiler': manual/embedding.md
         - 'Optimizing the Code': manual/optimizing.md
+        - 'Community': manual/community.md
         - 'Mathematical Documentation': manual/mathdoc.md
         - 'Frequently Asked Questions': manual/faq.md
     - Examples: 
