--- a/mkdocs/mkdocs.yml
+++ b/mkdocs/mkdocs.yml
@@ -49,6 +49,7 @@ nav:
         - 'Making a Sine Oscillator From Scratch' : tutorials/basic-osc.md
         - 'RMS and Summation in Faust' : tutorials/summation.md
         - 'Using Faust in Julia' : tutorials/julia.md
+        - 'Using the signal API' : tutorials/signal-api.md
     - Workshops:
       - ' 2018-12-01 PAW ' : workshops/2018-12-01-paw.md
       - ' 2020-03-24 CITI ': workshops/2020-03-24-faust-citi.md
