Add Debugging page.

--- a/mkdocs/mkdocs.yml
+++ b/mkdocs/mkdocs.yml
@@ -13,7 +13,8 @@ nav:
         - 'faust2[...] Tools': manual/tools.md
         - 'Architecture Files': manual/architectures.md
         - 'Embedding the Compiler': manual/embedding.md
-        - 'Optimizing the Code': manual/optimizing.md   
+        - 'Optimizing the Code': manual/optimizing.md 
+        - 'Debugging the Code': manual/debugging.md   
         - 'Deploying on the Web': manual/deploying.md
         - 'Remote compilation': manual/remote.md
         - 'Mathematical Documentation': manual/mathdoc.md
