box-api tutorial in progress.

--- a/mkdocs/mkdocs.yml
+++ b/mkdocs/mkdocs.yml
@@ -50,6 +50,7 @@ nav:
         - 'Making a Sine Oscillator From Scratch' : tutorials/basic-osc.md
         - 'RMS and Summation in Faust' : tutorials/summation.md
         - 'Using Faust in Julia' : tutorials/julia.md
+        - 'Using the box API' : tutorials/box-api.md
         - 'Using the signal API' : tutorials/signal-api.md
     - Workshops:
       - ' 2018-12-01 PAW ' : workshops/2018-12-01-paw.md
