avoid ':' in labels to make the various scripts happy

--- a/quick-reference/Makefile
+++ b/quick-reference/Makefile
@@ -32,7 +32,7 @@ mkdocs:
 	$(MAKE) -C mkdocs
 
 menu: 
-	$(MAKE) -C menu
+	$(MAKE) -C mkdocs menu
 
 
 faust-quick-reference.pdf: faust-quick-reference.tex $(CHAPTERS)
