--- a/mkdocs/mkdocs.yml
+++ b/mkdocs/mkdocs.yml
@@ -52,6 +52,7 @@ nav:
         - 'Using Faust in Julia' : tutorials/julia.md
         - 'Using the box API' : tutorials/box-api.md
         - 'Using the signal API' : tutorials/signal-api.md
+        - 'Using Faust in Cmajor' : tutorials/cmajor.md
     - Workshops:
       - ' 2018-12-01 PAW ' : workshops/2018-12-01-paw.md
       - ' 2020-03-24 CITI ': workshops/2020-03-24-faust-citi.md
