--- a/mkdocs/mkdocs.yml
+++ b/mkdocs/mkdocs.yml
@@ -55,6 +55,7 @@ nav:
         - 'Using the signal API' : tutorials/signal-api.md
         - 'Using Faust in Cmajor' : tutorials/cmajor.md
         - 'Using Faust in JSFX' : tutorials/jsfx.md
+        - 'Using Faust in RNBO with codebox~' : tutorials/rnbo.md
         - 'Advanced debugging with interp-tracer' : tutorials/debugging.md
     - Workshops:
       - ' 2018-12-01 PAW ' : workshops/2018-12-01-paw.md
