--- a/mkdocs/mkdocs.yml
+++ b/mkdocs/mkdocs.yml
@@ -1,5 +1,6 @@
 site_name: Faust Documentation
 site_description: A guide to the Faust Programming Language.
+site_url: https://ijc8.me/faustdoc/
 copyright: Copyright &copy; 2020-2024 <a href="https://www.grame.fr">Grame-CNCM</a>
 nav:
     - Home: index.md 
