Make faustdoc standalone at runtime
faustdoc needs the following dependencies:
- https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/github.min.css
- https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js
- https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js
- https://cdn.jsdelivr.net/npm/@grame/faust-web-component@0.4.1/dist/faust-web-component.js
The first three are coming from the default mkdocs theme. The last one is from Grame.

Previously they were called while browsing any faustdoc page. For multiple reasons (security,
functionality, privacy) it should be avoided if possible.

With this set of modifications they are now downloaded and embedded at build time, making faustdoc
standalone at runtime as it is not relying on other internet services anymore.

--- a/mkdocs/mkdocs.yml
+++ b/mkdocs/mkdocs.yml
@@ -86,10 +86,11 @@ plugins:
 
 extra_css:
    - '/css/quickref.css'
+   - '/css/github.min.css'
    - '/rail/railroad-diagrams.css'
 
 extra_javascript:
-  - https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML
+  - '/js/faust-web-component.js'
 
 markdown_extensions:
     - mdx_math
