Make faustdoc standalone at runtime
faustdoc needs the following dependencies:

    https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/github.min.css
    https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js
    https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js
    https://cdn.jsdelivr.net/npm/@grame/faust-web-component@0.4.1/dist/faust-web-component.js
The first three are coming from the default mkdocs theme. The last one is from Grame.

Previously they were called while browsing any faustdoc page.
For multiple reasons (security, functionality, privacy) it should be avoided if possible.

With this set of modifications they are now downloaded and embedded at build time,
making faustdoc standalone at runtime as it is not relying on other internet services anymore.

--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,9 @@ mkdocs/docs/qreference/
 
 mkdocs/docs/rail/[0-9]*
 
+mkdocs/docs/js
+mkdocs/docs/css
+
 src/examples/ambisonics.md
 src/examples/analysis.md
 src/examples/bela.md
