--- a/mkdocs/mkdocs.yml
+++ b/mkdocs/mkdocs.yml
@@ -26,6 +26,7 @@ nav:
         - 'Community': manual/community.md
         - 'Frequently Asked Questions': manual/faq.md
     - Examples: 
+         - ' All examples ': examples
          - ' ambisonics ': examples/ambisonics.md
          - ' analysis ': examples/analysis.md
          - ' bela ': examples/bela.md
